fix(welcomepage): hidden by default

--- a/styles.css
+++ b/styles.css
@@ -426,7 +426,7 @@ select:hover {
 }
 
 #welcomepage {
-    /* display: none; */
+    display: none;
     padding: 0.375rem;
     border-bottom-right-radius: 0.125rem;
     border-bottom-left-radius: 0.125rem;
